@@ -63,6 +63,7 @@ namespace lsp
                 inline void randomize(float min, float max) { ::lsp::test::randomize(pBuffer, nLength, min, max); }
                 void randomize()                            { ::lsp::test::randomize_positive(pBuffer, nLength); };
                 void fill_zero();
+                void fill(float v);
                 void copy(const FloatBuffer &buf);
                 void copy(const float *buf, size_t count);
                 void replace(const float *buf, size_t count);
