@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.7 ===
+* Added FloatBuffer::fill method.
 
 === 1.0.6 ===
 * Updated build scripts that now use tags without prefixes first.
